# str-uptools

./: README.md  pyproject.toml
strup/: __init__.py  types.py
strup.egg-info/: PKG-INFO  SOURCES.txt
